Add form to receive user input

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,11 +1,8 @@
-<img src="{{userFinalDetails.image}}">
+<!-- <img src="{{userFinalDetails.image}}">
 <hr>
 <h1>Username: {{userFinalDetails.userName}}</h1>
 <h1>Full Name:{{userFinalDetails.fullName}}</h1>
 <h1>Bio: {{userFinalDetails.briefDescription}}</h1>
-<h1>Public repos: {{userFinalDetails.myPublicRepos}}</h1>
+<h1>Public repos: {{userFinalDetails.myPublicRepos}}</h1>  --> -->
 
-<form>
-    <input placeholder="search" [(ngModel)]="userInput">
-</form>
-<button type="submit">Submit</button>
+<app-other-users></app-other-users>
