Add styling for page header

--- a/src/app/other-users/other-users.component.html
+++ b/src/app/other-users/other-users.component.html
@@ -1,14 +1,46 @@
-<div>
-  <input type="text" placeholder="search by username or repository name" [(ngModel)]="userNameInput" >
-  <button type="button"(click)='getUserInfo()'>Click me</button>
+<div class="jumbotron" id="title">
+  <h1 id="header">Git_Search</h1>
+</div>
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-2">
+      <p id="label">Username/Reponame:</p>
+  </div>
+  <div class="col-md-2">
+    <input class="form-control-lg" type="text" placeholder="username or reponame" [(ngModel)]="userNameInput" >
+  </div>
+  <div class="col-md-3">
+    <button class="btn btn-lg btn-success" type="button"(click)='getUserInfo(i)'>Search</button>
+  </div>
+</div>
+<br>
+<br>
+
+<div class="row">
+  <div class="col-md-3"></div>
+  <div id="userPic" class="col-md-5 polaroid"> 
+    <img src="{{userFinalDetails.image}}" id="profile-photo">
+    <hr>
+    <p>Username:  {{userFinalDetails.userName}}</p>
+    <hr >
+    <p>Fullname:  {{userFinalDetails.fullName}}</p>
+    <hr >
+    <p>Bio:  {{userFinalDetails.briefDescription}}</p>
+    <hr >
+    <p>Public Repos: {{userFinalDetails.myPublicRepos}}</p>
+    <hr>
+  </div>
 </div>
 
 
-<img src="{{userFinalDetails.image}}">
-<p>Username:{{userFinalDetails.userName}}</p>
-<p>Fullname:{{userFinalDetails.fullName}}</p>
-<p>Bio:{{userFinalDetails.briefDescription}}</p>
-<p>Public Repos: {{userFinalDetails.myPublicRepos}}</p>
-<p>Repo Name:{{userFinalRepoDetails.repoName}}</p>
-<p>Repo Description: {{userFinalDetails.description}}</p>
+<div *ngFor='let repo of userInfoService.repo; let i = index;'>
+  <div class="panel panel-success">
+    <div class="panel-heading">
+      <div class="panel-title">Repo Name:{{userInfoService.repo[i].name}}</div>
+    </div>
+    <div>
+      <p>userInfoService.repo[i].description</p>
+    </div>
+  </div>
+</div>
 
