--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,51 @@
-<app-other-users></app-other-users>
+<div class="jumbotron" id="title">
+  <h1 id="header">Git_Search</h1>
+</div>
+  
+
+<div class="col-md-3">
+  <a routerLink="/other_users"><button class="btn btn-lg btn-success" type="button">Search Other Users</button></a>     
+</div>
+
+<div class="row">
+  <div class="col-md-3"></div>
+  <div id="userPic" class="col-md-5 polaroid"> 
+    <img src="{{myFinalDetails.image}}" id="profile-photo">
+    <hr>
+    <p>Username:  {{myFinalDetails.userName}}</p>
+    <hr>
+    <p>Fullname:  {{myFinalDetails.fullName}}</p>
+    <hr>
+    <p>Bio:  {{myFinalDetails.briefDescription}}</p>
+    <hr>
+    <p>Public Repos: {{myFinalDetails.myPublicRepos}}</p>
+    <hr>
+  </div>
+</div>
+  
+  
+<div>
+    <ul *ngFor='let repo of userInfoService.repo; let i = index;'>
+      <li>Repo Name:{{userInfoService.repo[i].name}}</li>
+      <li>{{userInfoService.repo[i].description}}</li>
+      <li>{{userInfoService.repo[i].created_at}}</li>
+      <li>{{userInfoService.repo[i].updated_at}}</li>
+      <li>{{userInfoService.repo[i].homepage}}</li>
+      <li>{{userInfoService.repo[i].license}}</li>
+      <li>{{userInfoService.repo[i].forks}}</li>
+    </ul>
+</div>
+
+
+
+  <!-- <div class="card" style="width: 18rem; *ngFor='let repo of userInfoService.repo; let i = index;">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+   -->
+
+<!-- <router-outlet></router-outlet> -->
